[workspace]
members = [
    "crates/*"
]
resolver = "3"

[workspace.package]
authors = ["Vaiz"]
rust-version = "1.88"
edition = "2024"
homepage = "https://github.com/Vaiz/nfs3"
repository = "https://github.com/Vaiz/nfs3"
license = "Unlicense"

[workspace.dependencies]
nfs3_macros = { version = "0.5.0", path = "crates/nfs3_macros" }
nfs3_types = { version = "0.5.0", path = "crates/nfs3_types" }
nfs3_server = { version = "0.10.1", path = "crates/nfs3_server" }
nfs3_client = { version = "0.8.0", path = "crates/nfs3_client" }

anyhow = "1.0.98"
chrono = "0.4"
clap = { version = "4.5", default-features = false }
ctrlc = { version = "3.5" }
fastrand = "2.3"
filetime = "0.2.25"
intaglio = "1.10"
proc-macro2 = "1.0.95"
quote = "1.0.40"
socket2 = "0.6"
smol = "2.0"
syn = "2.0.101"
tokio = { version = "1.44.0", default-features = false }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
tempfile = "3"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"

significant_drop_tightening = "allow" # it's too buggy
missing_errors_doc = "allow"
collapsible_if = "allow"
