[package]
name = "cargo-nfs3-server"
version = "0.2.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = true
description = "Simple and easy-to-deploy NFSv3 server"
readme = "README.md"

[dependencies]
nfs3_server = { workspace = true, features = ["memfs", "fs_util"] }

clap = { workspace = true, default-features = true, features = ["derive"] }
ctrlc = { workspace = true } 
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["tracing-log"] }
intaglio = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"], default-features = false }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.21.0"
